hphp/test/zend/good/ext/standard/tests/misc/time_nanosleep_error3.php.skipif
<?php 
if (strpos(strtoupper(PHP_OS), 'WIN') !== false) die("skip Test is not valid for Windows");
if (!function_exists('time_nanosleep')) die("skip");
?>